fixed overflow

--- a/frontend/src/components/Notebooks/Notebooks.css
+++ b/frontend/src/components/Notebooks/Notebooks.css
@@ -53,7 +53,7 @@
   width: 200px;
   height: 300px;
   font-size: 20px;
-  overflow: hidden;
+  overflow-y: scroll;
 }
 #notebook-list:hover {
   cursor: pointer;
@@ -64,7 +64,7 @@
   width: 200px;
   height: 300px;
   font-size: 20px;
-  overflow: hidden;
+  overflow-y: scroll;
 }
 #note-list:hover {
   cursor: pointer;
